--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="app">
-        <div v-for="email in emailList">{{email}}</div>
+        <div v-for="email in emailList" v-show="ready">{{email}}</div>
     </div>
     <script src="script.js"></script>
 </body>
